--- a/PhotoCollectionHectorJohnDiante/PhotoCollectionHectorJohnDiante/Base.lproj/Main.storyboard
+++ b/PhotoCollectionHectorJohnDiante/PhotoCollectionHectorJohnDiante/Base.lproj/Main.storyboard
@@ -79,7 +79,13 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="oaU-R8-R34">
-                        <barButtonItem key="leftBarButtonItem" title="Select Theme" id="xqS-uR-o9k"/>
+                        <barButtonItem key="leftBarButtonItem" title="Select Theme" id="xqS-uR-o9k">
+                            <connections>
+                                <segue destination="atf-ET-UQy" kind="popoverPresentation" popoverAnchorBarButtonItem="xqS-uR-o9k" id="USy-i2-Htk">
+                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                </segue>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Add" id="Zn0-yn-gUE">
                             <connections>
                                 <segue destination="Kzu-Jm-HiU" kind="show" identifier="Detailsegue" id="vyG-BG-2sa"/>
@@ -90,6 +96,69 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5o8-lV-cEK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1055.072463768116" y="133.92857142857142"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="EGX-Zc-fjK">
+            <objects>
+                <viewController id="atf-ET-UQy" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5tE-Ji-b7j">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="GDY-SX-qJG">
+                                <rect key="frame" x="16" y="144" width="382" height="98.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photo Collection" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="erP-Ya-kSu">
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="42"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select the theme you would like to use:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mfZ-bF-IJo">
+                                        <rect key="frame" x="0.0" y="72" width="368" height="26.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="erP-Ya-kSu" firstAttribute="leading" secondItem="GDY-SX-qJG" secondAttribute="leading" id="93R-Kd-6bL"/>
+                                    <constraint firstItem="erP-Ya-kSu" firstAttribute="top" secondItem="GDY-SX-qJG" secondAttribute="top" id="X9y-34-luJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="erP-Ya-kSu" secondAttribute="trailing" id="gjV-qk-A2X"/>
+                                </constraints>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6lH-Qg-TJI">
+                                <rect key="frame" x="72" y="265.5" width="33" height="30"/>
+                                <state key="normal" title="Dark"/>
+                                <connections>
+                                    <action selector="darkButtonPressed:" destination="2Fg-Sy-fTe" eventType="touchUpInside" id="SHW-pj-lK6"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C7F-st-XkU">
+                                <rect key="frame" x="268" y="265.5" width="44" height="30"/>
+                                <state key="normal" title="Yellow"/>
+                                <connections>
+                                    <action selector="yellowButtonPressed:" destination="2Fg-Sy-fTe" eventType="touchUpInside" id="uK5-SY-yZg"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Wye-JN-gKF" firstAttribute="trailing" secondItem="C7F-st-XkU" secondAttribute="trailing" constant="102" id="2co-n5-dIU"/>
+                            <constraint firstItem="6lH-Qg-TJI" firstAttribute="leading" secondItem="Wye-JN-gKF" secondAttribute="leading" constant="72" id="IcZ-pL-DkC"/>
+                            <constraint firstItem="Wye-JN-gKF" firstAttribute="trailing" secondItem="GDY-SX-qJG" secondAttribute="trailing" constant="16" id="VhO-tn-ehF"/>
+                            <constraint firstItem="GDY-SX-qJG" firstAttribute="leading" secondItem="Wye-JN-gKF" secondAttribute="leading" constant="16" id="WKb-q8-XYp"/>
+                            <constraint firstItem="6lH-Qg-TJI" firstAttribute="baseline" secondItem="C7F-st-XkU" secondAttribute="baseline" id="Zvh-BD-NbP"/>
+                            <constraint firstItem="6lH-Qg-TJI" firstAttribute="top" secondItem="GDY-SX-qJG" secondAttribute="bottom" constant="23" id="b9x-74-frE"/>
+                            <constraint firstItem="GDY-SX-qJG" firstAttribute="top" secondItem="Wye-JN-gKF" secondAttribute="top" constant="100" id="ede-1n-CkB"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Wye-JN-gKF"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tmh-ds-Fst" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="2Fg-Sy-fTe" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1053.6231884057972" y="1005.8035714285713"/>
         </scene>
         <!--Photo Detail View Controller-->
         <scene sceneID="1Hx-Kb-nj5">
