--- a/PhotoCollectionHectorJohnDiante/PhotoCollectionHectorJohnDiante/Base.lproj/Main.storyboard
+++ b/PhotoCollectionHectorJohnDiante/PhotoCollectionHectorJohnDiante/Base.lproj/Main.storyboard
@@ -70,6 +70,7 @@
                                 <connections>
                                     <outlet property="imageView" destination="At9-EE-9zC" id="UpP-eX-RkO"/>
                                     <outlet property="photoLabel" destination="zfT-pG-JHY" id="Ae1-QJ-WJP"/>
+                                    <segue destination="Kzu-Jm-HiU" kind="show" identifier="updateSegue" id="qrt-E2-azL"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -86,7 +87,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Add" id="Zn0-yn-gUE">
                             <connections>
-                                <segue destination="Kzu-Jm-HiU" kind="show" identifier="Detailsegue" id="vyG-BG-2sa"/>
+                                <segue destination="Kzu-Jm-HiU" kind="show" identifier="AddSegue" id="vyG-BG-2sa"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -152,11 +153,12 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Wye-JN-gKF"/>
                     </view>
+                    <navigationItem key="navigationItem" id="CtH-5q-DlO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tmh-ds-Fst" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="2Fg-Sy-fTe" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1053.6231884057972" y="1005.8035714285713"/>
+            <point key="canvasLocation" x="545" y="915"/>
         </scene>
         <!--Photo Detail View Controller-->
         <scene sceneID="1Hx-Kb-nj5">
@@ -235,4 +237,7 @@
             <point key="canvasLocation" x="144.92753623188406" y="133.92857142857142"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="vyG-BG-2sa"/>
+    </inferredMetricsTieBreakers>
 </document>
